--- a/Networking/OSI-Layers/Layer-3/Security/Hash_MessageDigest_MAC_HMAC/README.adoc
+++ b/Networking/OSI-Layers/Layer-3/Security/Hash_MessageDigest_MAC_HMAC/README.adoc
@@ -1,71 +1,1 @@
-:toc:
-:toclevels: 6
-
-=== Hash / Message Digest
-* Transforming String into FIXED-LENGTH-Integer Value. From Hash Message cannot be retrieved back. Hash function should not generate same value for different input strings. 
-* MD5 started producing that and hence considered broken.
-```c
-Kumar >  | Hash Function |  > random_string
-```
-==== Why Hash?
-Determine if their content has been corrupted or not. 
-
-==== Hashing Algos Compared
-|===
-| Hashing Algo | SHA1,SHA0(broken) |SHA256 (or v2)(not broken) | SHA3/Keccak(or 512) | MD4,MD5(broken)
-
-| Published | 1995 | 2012 | 2015 | 2015
-| Input | 2128 bit | 2128 bit | 264 bit | infinite
-| Output Hash(bits)| 160 | 256 | 512 | 128
-|===
-
-==== Hashing Algos
-===== 1. MD5
-* 1. Take four 32-bit words, initialized to fixed constants.
-```c
-C1(01 23 45 67), C2:(89 ab cd ef), C3(fe dc ba 98), C4(76 54 32 10)
-```
-* 2. Take 4 Functions
-```c
-    f(x,y,z) = (x & y) | ((~x) & z)
-    g(x,y,z) = (x & z)| (y & (~z))
-    h(x,y,z) = x ^ y ^ z
-    i(x,y,z) = y ^ (x | (~z))
-```    
-* 3. Break input into 32-bit words
-```c
-                Input(512 bits)  ->  |Break into 16 pieces| ->     m1 .. m16
-if input is not 512 bit pad it
-```
-* 4. Perform 4 or 16 round Operations.
-```c
-//AM: Addition Modulo
-  Round-1:    F(K2,K3,K4) ->  AM ->  AM -> |Rotate left bit by s places| ->  AM -> K2        
-                              /\     /\                                      /\
-                              C1     m1                                      C2
-  Round-2: For m2 and so on..
-```
-
-===== 2. argon2
-|===
-||Argon2|Argon2i|Argon2id
-
-|Adv|Max resistance to GPU cracking attacks.|Resistant to side-channel attacks|Removes both's disadv
-|Diadv|Prone to side-channel attacks
-|===
-
-=== MAC
-* Examples: CMAC, SHA1-HMAC, MD5-HMAC, UMAC
-```c
-(Message + Pvt Key) > |Hash function| > MAC    
-```
-
-=== HMAC(Hashed MAC)
-More complex way of calculating MAC
-```c
-
- secret Key ->(XOR) <- Inner Pad     Secret Key-> (XOR) <- Outer Pad
-                \/                                 \/
-                M1                                 M2
-                      |M-1| Message | M2 |
-```
+link:https://amitkumar50.github.io/Networking/OSI-Layers/Layer-3/Security/Hash%20MAC.html[Hash, MAC, HMAC]
