--- a/DS_Questions/Questions/Strings/Reverse/Reverse_String.adoc
+++ b/DS_Questions/Questions/Strings/Reverse/Reverse_String.adoc
@@ -15,7 +15,7 @@ Input: s = ["H","a","n","n","a","h"]
 Output: ["h","a","n","n","a","H"]
 ```
 
-== C++11
+== CPP11
 ```cpp
 class Solution {
 public:
@@ -27,4 +27,23 @@ public:
             swap(*it, *itr);
     }
 };
+```
+
+== Rust
+```rs
+use std::mem;
+impl Solution {
+    pub fn reverse_string(s: &mut Vec<char>) {
+        if s.is_empty() {
+            return;
+        }
+        let mut i = 0;
+        let mut j = s.len() - 1;
+        while i < j {
+            s.swap(i, j);
+            i += 1;
+            j -= 1;
+        }
+    }
+}
 ```
