--- a/Networking/OSI-Layers/Layer-3/Security/Hash_MessageDigest_MAC_HMAC/README.adoc
+++ b/Networking/OSI-Layers/Layer-3/Security/Hash_MessageDigest_MAC_HMAC/README.adoc
@@ -1,1 +1,1 @@
-link:https://amitkumar50.github.io/Networking/OSI-Layers/Layer-3/Security/Hash%20MAC.html[Hash, MAC, HMAC]
+== link:https://code-with-amitk.github.io/Networking/OSI-Layers/Layer-3/Security/Hash%20MAC.html[Hash, MAC, HMAC]
