--- a/Languages/Programming_Languages/GoLang/README.adoc
+++ b/Languages/Programming_Languages/GoLang/README.adoc
@@ -128,48 +128,9 @@ slc[0]=1,	slc[1]=2,	slc[2]=3
 slc[]=1,	slc[]=2,	slc[]=3
 ```
 
-=== Package/Modules in Go = link:/Languages/Programming_Languages/c%2B%2B/namespaces[C++(namespace)] = link:/Languages/Programming_Languages/Rust/Crates_Packages_Modules[Rust(crates)]
-Every Go program must run inside a package hence package statement is always the first line in a Go file. It specifies the package name that the file belongs to. main package is entry point for an executable program. When we create a Go program, it must have a main package, and within that package, there must be a main function.
-
-This is unique namespace for (variables, functions, types, etc.) defined within the package.
-
-==== import statement
-import keyword is used to include external packages/modules in Go program.
-```go
-import "fmt"
-or 
-import (              //import multiple packages
-    "fmt"
-    "math"
-)
-
-// Use functions in package using dot statement
-fmt.Println("Hello, world!")
-```
-
-==== error package
- errors package is a standard package provided by go's standard library. It is used to create and manipulate errors in a consistent and idiomatic way
-```go
-package main
-import (
-    "errors"
-    "fmt"
-)
-func divide(a, b int) (int, error) {	//Function returning int AND error
-    if b == 0 {
-        return 0, errors.New("division by zero")
-    }
-    return a / b, nil
-}
-func main() {
-    result, err := divide(10, 2)
-    if err != nil {
-        fmt.Println("Error:", err)
-        return
-    }
-    fmt.Println("Result:", result)
-}
-```
+=== link:https://code-with-amitk.github.io/Languages/Programming/Go/Modules/[Package/Modules in Go]
+* import statement
+* error package
 
 === Pointers
 `& operator` generates pointer to operand. `* operator` derefences pointer's value. Unlike C there is no pointer arithematic in go
