--- a/Languages/Programming_Languages/GoLang/Collections.adoc
+++ b/Languages/Programming_Languages/GoLang/Collections.adoc
@@ -21,87 +21,8 @@ func main() {
 ==== Sets
 Go doesn't have a built-in set data type, but you can simulate sets using maps.
 
-=== Slice [] (Dynamic Array) = C++(vector`<int>`) = link:Languages/Programming_Languages/Rust/Collections[Rust(vec`<i32>`)]
-* A slice represents a view of contiguous sequence of elements in memory.
-* *Slice contains 3 components*
-** _1. Pointer to underlying array:_ A slice holds a reference to the underlying array that stores the elements.
-** _2. Length:_ number of elements in slice.
-** _3. Capacity:_ maximum number of elements it can hold 
-```go
-package main
-func main() {
-
-// SLICE DECLARATION
-  var arr []int                       //Empty vector
-  slice := make([]int, 5)             //Slice size=5
-
-// INITIALIZATION
-  arr := []int {1,2,3,4,5,6}        //Length=6. number of elements provided
-  for i:=0; i<5; i++ {
-    slice[i] = 0;
-  }
-  
-// SLICE MODIFICATION: Changing elements of a slice modifies the corresponding elements of its underlying array 
-  slc[0] = 899
-  fmt.Println(arr[1])             //899
-
-// length: no of elements slice contains
-// capacity: no of elements in underlying array
-  fmt.Println(len(slc),cap(slc))  //3 5
-
-// NIL SLICE
-  var nilSlc[]int
-  fmt.Println(len(nilSlc), cap(nilSlc))   //0 0
-
-//RESLICING:  Slice the Slice's length to new length
-    slc1 := []int{10,20,30,40,50}
-    slc1 = slc1[:0]
-    fmt.Println(slc1)                       //[]
-    slc1 = slc1[:4]
-    fmt.Println(slc1)                       //[10,20,30,40]
-    slc1 = slc1[2:]
-    fmt.Println(slc1)                       //[30,40]
-
-//MAKE SLICE: make() allocates a zeroed array and returns a slice that refers to that array
-    slc2 :=make([]int, 5)                   //[0 0 0 0 0]
-    fmt.Println(slc2)
-
-//APPEND TO SLICE: append(slice, element). Append new element to slice
-    slc3 := []int{10,20,30,40,50}           //[10 20 30 40 50 60]
-    slc3 = append(slc3,60)
-    fmt.Println(slc3)
-}
-```
-
-===== 2D Vector
-```go
-  // Method-1: Declare a 2D vector
-  var test [][]int     
-  
-  // Method-2: Declare an empty 2D vector
-  test := make([][]int, rows)
-  // Initialize each row with specific length
-  for i := range vector {
-    test[i] = make([]int, cols)
-  }
-  
-  // Method-3: Declare an empty 2D vector
-  var test [][]int
-  // Initialize each row with specific length
-  for i := 0; i < rows; i++ {
-    test = append(test, make([]int, cols))
-  }
-
-
-  // Initialize the 2D vector with values
-  test = [][]int {
-    1,2,3
-    4,5,6
-  }
-  
-  // Accessing elements in the 2D vector
-  fmt.Println(vector[0][0]) // Output: 1
-```
+=== link:https://code-with-amitk.github.io/Languages/Programming/Go/Collections.html#slices[Slice [] (Dynamic Array) = C++(vector`<int>`) = Rust(vec`<i32>`)]
+==== link:https://code-with-amitk.github.io/Languages/Programming/Go/Collections.html#slices[2D Vector]
 
 ==== Heaps (implemented using slice)
 The standard library doesn't provide a heap implementation, but you can create your own heaps using slices 
@@ -133,7 +54,7 @@ func (this *MyStack) Empty() bool {	//Size()
 }
 ```
 
-==== Stack (implemented using slice)
+==== link:https://code-with-amitk.github.io/Languages/Programming/C++/STL/Containers/Container_Adoptors/stack.html[Stack (implemented using slice)]
 
 
 === (struct = class)
