--- a/DS_Questions/Questions/vectors_arrays/Create/Find Valid Matrix Given Row and Column Sums.adoc
+++ b/DS_Questions/Questions/vectors_arrays/Create/Find Valid Matrix Given Row and Column Sums.adoc
@@ -93,3 +93,30 @@ public:
     }
 };
 ```
+==== Rust
+```rs
+use std::cmp;
+impl Solution {
+    pub fn restore_matrix(mut row_sum: Vec<i32>, mut col_sum: Vec<i32>) -> Vec<Vec<i32>> {
+        let rows = row_sum.len();
+        let cols = col_sum.len();
+        let mut i = 0;
+        let mut j = 0;
+        let mut out:Vec<Vec<i32>> = vec![vec![0; cols]; rows];
+
+        while i<rows && j<cols {
+            let val = cmp::min(row_sum[i], col_sum[j]);
+            out[i][j] = val;
+            row_sum[i] -= val;
+            col_sum[j] -= val;
+            if row_sum[i] == 0 {
+                i += 1;
+            }
+            if col_sum[j] == 0 {
+                j += 1;
+            }
+        }
+        out
+    }
+}
+```
