--- a/DS_Questions/Questions/vectors_arrays/SubSequence_SubArray/SubSequence/Increasing_Decreasing_Subseq_Count_Number_of_Teams.adoc
+++ b/DS_Questions/Questions/vectors_arrays/SubSequence_SubArray/SubSequence/Increasing_Decreasing_Subseq_Count_Number_of_Teams.adoc
@@ -88,7 +88,7 @@ public:
 ```
 
 ==== CPP11
-link:https://code-with-amitk.github.io/Languages/Programming/C++/C++_11,14,17,20,23/C++11/Function%20pointer.html[function<bool(int, int)> is a function pointer from c++11]
+* *function<bool(int, int)> is a function pointer from c++11*. link:https://code-with-amitk.github.io/Languages/Programming/C++/C++_11,14,17,20,23/C++11/Function%20pointer.html[link]
 ```c
 #include<functional>
 class Solution {
