--- a/DS_Questions/Questions/vectors_arrays/Find_Search_Count/Find/Unsorted/kth_Largest_Smallest/Kth_Largest_Element_in_Stream.adoc
+++ b/DS_Questions/Questions/vectors_arrays/Find_Search_Count/Find/Unsorted/kth_Largest_Smallest/Kth_Largest_Element_in_Stream.adoc
@@ -1,10 +1,5 @@
-**Kth Largest Element in a Stream**
-- [Approach-1. Min Heap](#a1)
-  - [Logic](#l)
-  - [Complexity](#c)
-  - Code
-    - [CPP](#cpp)
-    - [Rust](#rs)
+:toc:
+:toclevels: 6
 
 == link:https://leetcode.com/problems/kth-largest-element-in-a-stream/description/[703. Kth Largest Element in a Stream]
 * Design a class to find the kth largest element in a stream. Note that it is the kth largest element in the sorted order, not the kth distinct element.
